Fixed spacing, disabled splash (will be triggered by client - if in demo)

--- a/main.css
+++ b/main.css
@@ -173,8 +173,8 @@ body {
 
 #announcement h1, #announcement h2, #announcement p {
   #font-size: 1.3em;
-  margin-block-start: 0.15em;
-  margin-block-end: 0.15em;
+  margin-block-start: 0.13em;
+  margin-block-end: 0.13em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
 }
@@ -212,6 +212,10 @@ body {
 
 #verse, #song {
   line-height: 1.4;
+}
+
+#announcement li {
+	line-height: 1.3em;
 }
 
 /* Remove new lines from biblical text */
